.provarCaches/00D5f000005vwGkEAI/objects/rstk__joblog__c.object
<CustomObject>
    <description>joblog__c</description>
    <fields>
        <fullName>rstk__error__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__errormessage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Error Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__jobname__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Job Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__log__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__logtype__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                    <default>true</default>
                    <label>Contract</label>
                </value>
                <value>
                    <fullName>Current Billing Run</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__rundate__c</fullName>
        <inlineHelpText>Identifies the common run date for when a billing run is being performed.</inlineHelpText>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbbatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the The Billing Run Batch Header associated with this log.</inlineHelpText>
        <label>Billing Run Batch Header</label>
        <referenceTo>rstk__soconpbbatch__c</referenceTo>
        <relationshipLabel>Job Log</relationshipLabel>
        <relationshipName>joblogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contract Master</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Job Log</relationshipLabel>
        <relationshipName>joblogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Job Log</label>
    <listViews>
        <fullName>rstk__Rstk</fullName>
        <columns>NAME</columns>
        <columns>rstk__jobname__c</columns>
        <columns>rstk__socontract__c</columns>
        <columns>rstk__error__c</columns>
        <columns>rstk__errormessage__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__logtype__c</columns>
        <columns>rstk__log__c</columns>
        <filterScope>Everything</filterScope>
        <label>Rstk</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>